Added form style

--- a/src/index.css
+++ b/src/index.css
@@ -27,25 +27,69 @@ code {
   padding: 50px;
 }
 
+/* STYLE OF PRODUCT */
 .post-form {
   width: 500px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   margin: auto auto;
+  background: linear-gradient(#4b6cb7, #182848);
+  padding: 100px;
+  border-radius: 5px;
 }
 
-.row h5{
+.form-title {
+  color: aliceblue;
+  font-size: 26px;
+}
+
+.form-child {
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-label {
+  font-size: 18px;
+  width: 100%;
   text-align: start;
+  color: aliceblue;
+  margin-bottom: 10px;
 }
 
-.row-input {
-  width: 150px;
-  height: 25px;
-  margin: 10px;
+.form-input {
+  height: 45%;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+}
+/* GLOW EFFECT TO INPUT IF IS IN FOCUS */
+.form-input:focus {
+  outline: none;
+  border-color: #7abbf0;
+  box-shadow: 0 0 15px #7abbf0;
 }
 
 .post-button {
   width: 150px;
-  height: 35px;
+  height: 60px;
   margin: auto auto;
+  border: none;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: #7abbf0;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+/* SUBMIT BUTTON ANIMATION ON HOVER */
+.post-button:hover {
+  background-color: white;
+  color: black;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
 }
