--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
 .App ul li {
-  display: inline;
-  list-style-type: none;
-  margin: 5px;
+    display: inline;
+    list-style-type: none;
+    margin: 5px;
+    
+  }
   
-}
-
-.toolbar{
-  text-align: left;
-  background-color: rgb(131, 130, 130);
-  padding: 5px;
-  margin-bottom: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.link{
-  text-decoration: none;
-  color:rgb(60, 82, 105);
-  font-size: x-large;
-  margin-right: 30px;
-}
+  .toolbar{
+    width: 90%;
+    margin: auto auto;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    background: linear-gradient(#474a4c, #595c5f);
+    padding: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .link{
+    text-decoration: none;
+    color:aliceblue;
+    font-weight: bold;
+    font-size: x-large;
+    margin-right: 30px;
+  }
